# sql_sync

./: .gitignore  Cargo.toml  README.md
example/: hi.toml
src/: config.rs  main.rs
src/config/: create_config.rs
src/helpers/: mod.rs  return_config_toml.rs
src/template/: config.toml
