[package]
name = "sql_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "3.1.10"
features = ["derive"]

[dependencies.confy]
version = "0.4.0"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]